fix: prevent the sandbox canvas from shrinking too much

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,12 +28,12 @@ $link-dark: $cyan;
 }
 
 #canvas {
-  height: 50%;
+  min-height: 40svh;
 }
 
 #editor {
   background: $background;
-  min-height: 50svh;
+  min-height: 40svh;
 }
 
 #editor > * {
